--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking-control-db
 spring.datasource.username=admin
 spring.datasource.password=abc123
